# Snapshot-Isolation-in-C-

./: .gitignore  CMakeLists.txt  Notes.excalidraw  README.md
src/: CMakeLists.txt  main.cpp
src/include/mvcc/: mvcc.hpp
src/include/naive_storage_engine/: naive_storage_engine.hpp
src/include/server/: connection_handler.hpp
src/include/server/thread_pool/: thread_pool.hpp
src/include/util/: mvcc_metadata_codec.hpp
src/mvcc/: README.md  mvcc.cpp
src/naive_storage_engine/: README.md  naive_storage_engine.cpp
src/server/: connection_handler.cpp
src/server/thread_pool/: thread_pool.cpp
src/util/: mvcc_metadata_codec.cpp
system_test/: CMakeLists.txt  README.md  mvcc_system_test.cpp
test/: CMakeLists.txt  mvcc_test.cpp  naive_storage_engine_test.cpp  thread_pool_test.cpp
